# evopop-icon-theme-source

./: Makefile.am  configure.ac  render-bitmaps.py
EvoPop-0.7/: index.theme
